# CMakeAutoDeployDemo

./: .gitignore  CMakeLists.txt  Info.plist  Info.plist.in  README.md
